--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,12 +4,12 @@ $title :#29282d;
 $bg:#f6f6f6;
 
 %quicksand-400{
-  font-family: 'Quicksand-Regular'sans-serif;
+  font-family: 'Quicksand-Regular',sans-serif;
   font-weight: 400;
 }
 
 %quicksand-500{
-  font-family: 'Quicksand-Medium'sans-serif;
+  font-family: 'Quicksand-Medium',sans-serif;
   font-weight: 500;
 }
 
@@ -21,4 +21,13 @@ $bg:#f6f6f6;
 %roboto-700{
   font-family: 'Roboto-Bold',sans-serif;
   font-weight: 700;
+}
+
+%btn{
+  background-color: $accent;
+  padding: 12px 26px;
+  text-transform: uppercase;
+  color: #fff;
+  @extend %roboto-400;
+  box-shadow: 0px 7px 20px 0px rgba(255,17,48,0.3);
 }
