--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header{
@@ -11,7 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
  }
 }
  .menu{
@@ -85,7 +85,6 @@ footer{
 margin-bottom: 33px;
 display: block;
 }
-
 &__adress,
 &__email,
 &__phone{
@@ -140,13 +139,10 @@ margin-bottom: 14px;
   }
 }
   &__form-btn{
+  @extend %btn;
   border: none;
-  background-color: $accent;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 12px 26px;
-  box-shadow: 0px 7px 20px 0px rgba(255,17,48,0.3);
   cursor: pointer;
+  
   }
 }
   .footer-bottom{
@@ -161,6 +157,83 @@ margin-bottom: 14px;
   vertical-align: middle;
   }
 }
+
+.top-slider{
+  background-image: url('../images/slider/top-slider-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: $bg;
+  padding: 65px 0 45px;
+  &__container{
+     max-width: 1560px;
+  }
+  &__content{
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title{
+    max-width: 670px;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+  &__text{
+    max-width: 470px;
+     margin-bottom: 55px;
+  }
+  &__link{
+      @extend %btn;
+       padding: 14px 36px;
+  }
+  .slick-dots{
+      display: flex;
+      justify-content: center;
+      margin-top: -70px;
+      li{
+        padding: 0 5px;
+        line-height: 0;
+        button{
+            padding: 0;
+            font-size: 0;
+            background-color: transparent;
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            border: 1px solid transparent;
+            position: relative;
+            &::before{
+              content: '';
+              position: absolute;
+              width: 6px;
+              height: 6px;
+              border-radius: 50%;
+              background-color: $default;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+          }
+        }
+          &.slick-active{
+             button{
+                border-color: $accent;
+                &::before{
+                  background-color: $accent;
+
+                }
+             }
+          }
+        }
+      }
+    }
+  
+  
+
 
 
 
