--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -159,11 +159,12 @@ margin-bottom: 14px;
 }
 
 .top-slider{
-  background-image: url('../images/slider/top-slider-bg.png');
+  background-image: url('../images/decor/top-slider-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-color: $bg;
   padding: 65px 0 45px;
+  
   &__container{
      max-width: 1560px;
   }
@@ -232,8 +233,160 @@ margin-bottom: 14px;
       }
     }
   
-  
+  .categories-info{
+ padding: 120px 10px;
+ background-image: url('../images/decor/categories-left-bg.png');
+ background-repeat: no-repeat;
+ background-position: center left;
+ &__inner{
+  background-image: url('../images/decor/categories-right-bg.png');
+ background-repeat: no-repeat;
+ background-position: center right;
+  }
+ }
 
+  .info{
+ display: flex;
+ justify-content: space-between;
+ margin-bottom: 110px;
+ position: relative;
+ &::before,
+ &::after{
+   content: '';
+   position: absolute;
+   z-index: -1;
+ }
+ &::before{background-image: url(../images/decor/info-beafore-bg.svg);
+ top: -40px;
+ left: -45px;
+ width: 120px;
+ height: 121px;
+ }
+&::after{
+background-image: url(../images/decor/info-after-bg.svg);
+bottom: -23px;
+right: -23px;
+width: 65px;
+height: 52px;
+}
+ &__item{
+   background-color: #fff;
+   padding: 60px 30px;
+   width: 370px;
+   box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+ }
+ &__item-title{
+   margin: 35px 0 10px;
+   color: $title;
+   font-size: 22px;
+   @extend %roboto-400;
+ }
+  }
+
+  .categories{
+    &__items{
+      display: grid;
+      min-height: 635px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: 30px;
+    }
+    &__item{
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+      padding-top: 35px;
+      padding-left: 40px;
+      &:nth-child(1){
+        grid-row: span 2;
+        .categories__item-subtitle, 
+        .categories__link:hover{
+          color: #5800e4;
+        }
+    }
+     &:nth-child(2){
+       grid-column: span 2;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       padding-top: 0;
+       .categories__item-subtitle, 
+       .categories__link:hover{
+          color: $accent;
+        }
+  }
+    &:nth-child(3){  
+      .categories__item-subtitle, 
+      .categories__link:hover{
+        color: #ffb534;
+        }
+}
+    &:nth-child(4){  
+      .categories__item-subtitle, 
+      .categories__link:hover{
+        color: #34c3ff;
+        }
+      }
+    }
+
+&__item-subtitle{
+  margin-bottom: 5px;
+}
+&__item-title{
+  font-size: 22px;
+  color:$title;
+  margin-bottom: 16px;
+}
+&__link{
+  text-transform: uppercase;
+  color: $title;
+  @extend %roboto-400;
+  transition: all .3s;
+  }
+ }
+
+.video-fashion{
+background-color: $bg;
+background-image: url('../images/decor/pattern.svg');
+background-size: cover;
+background-position: top center;
+background-repeat: no-repeat;
+padding: 125px 0; 
+&__inner{
+  display: flex;
+}
+&__popup{
+margin-right: 60px;
+max-width: 530px;
+width: 100%;
+height: 480px;
+display: flex;
+justify-content: center;
+align-items: center;
+background-repeat: no-repeat;
+background-position: center center;
+background-size: cover;
+}
+&__content{
+max-width: 570px;
+}
+&__subtitle{
+  padding-top: 75px;
+  font-size: 22px;
+  color: $accent;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+&__title{
+  text-align: left;
+}
+&__text{
+margin-bottom: 55px;
+}
+&__link{
+  @extend %btn;
+  }
+ }
 
 
 
@@ -243,5 +396,6 @@ margin-bottom: 14px;
 
 @import 'media';
 
+  
 
-
+  
