--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -119,6 +119,9 @@ margin-bottom: 14px;
       font-size:22px;
       line-height: 1;
 }
+&__form{
+  display: flex;
+}
 &__link{
   margin-bottom: 14px;
   display: block;
@@ -130,6 +133,7 @@ margin-bottom: 14px;
   background-color: #fff;
   max-width: 320px;
   width: 100%;
+  margin-right: 3px;
   border: none;
   padding: 12px 10px 12px 15px;
   box-shadow: 0px 7px 20px 0px rgba(24, 17, 17, 0.3);
