--- a/app/module/_header/_header.scss
+++ b/app/module/_header/_header.scss
@@ -1,40 +1,45 @@
 .header{
-  padding: 40px 0;
+   padding: 40px 0;
   &__inner{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+  }
  }
-}
+
  .menu{
+   &__btn{
+     display: none;
+   }
    &__list{
-     display: flex;
+    display: flex;
    }
    &__list-item + .menu__list-item{
-     padding-left: 35px;
+    padding-left: 35px;
    }
    &__list-link{
-     color: $title;
-     padding-bottom: 0 2px 1px;
-     transition: all .3s;
-     @extend %roboto-400;
-     &:hover{
-        color: $accent;
-        border-bottom:  1px solid $accent;
-        @extend %roboto-700;
+    color: $title;
+    padding-bottom: 0 2px 1px;
+    transition: all .3s;
+    @extend %roboto-400;
+    &:hover{
+    color: $accent;
+    border-bottom: 1px solid $accent;
+     @extend %roboto-700;
      }
-   }
-   &__list-link--active{
-      color: $accent; 
-      border-bottom:  1px solid $accent;
-      @extend %roboto-700;
+    }
+  &__list-link--active{
+    color: $accent; 
+    border-bottom: 1px solid $accent;
+    @extend %roboto-700;
    }
  }
 
 .user-nav{
-  display: flex;
+    display: flex;
   &__link{
- position: relative;
+    position: relative;
   }
   &__link + .user-nav__link{
     padding-left: 25px;
@@ -51,6 +56,104 @@
     line-height: 20px;
     text-align: center;
     color: #fff;
-    
   }
 }
+
+
+@media (max-width: 1200px){
+  .header{
+    &__inner{
+   padding-right: 10px;
+  }
+ }
+}
+
+@media (max-width: 860px){
+  .menu{
+      order: 1;
+      margin-left: 40px;
+    &__list{
+      transform: translateY(-200%);
+      position: absolute;
+      top: 120px;
+      width: 100%;
+      left: 0;
+      flex-direction: column;
+      align-items: center;
+      z-index: 5;
+      transition: all .3s;
+      background-color: #fff;
+      &.menu__list--active{
+      transform: translateY(0%);
+      transition: all .3s;
+     }
+    }
+    &__list-item + .menu__list-item{
+      padding-left: 15px;
+    }
+    &__list-item{
+        width: 100%;
+        padding: 0 15px;
+        text-align: center;
+    }
+    &__list-link{
+        display: block;
+        padding: 12px 0;
+    }
+    &__btn{
+      width: 30px;
+      height: 22px;
+      border: none;
+      background-color: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      padding: 0;
+      span{
+        width: 100%;
+        height: 3px;
+        background-color: $title;
+    }
+    &::after,
+    &::before{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 3px;
+      background-color: $title;
+      }
+      &::before{
+        top: 0;
+      }
+      &::after{
+        bottom: 0;
+      }
+    }
+  }
+    .user-nav{
+      margin-left: auto;
+    }
+  }
+
+  @media (max-width: 500px){
+    .header{
+      &__inner{
+        padding-right: 0;
+      }
+    }
+  .menu{
+     order: 0;
+     &__list{
+       top: 140px;
+     }
+  }
+  .user-nav{
+    width: 100%;
+    justify-content: flex-end;
+    margin-top: 35px;
+    padding-right: 15px;
+   }
+  }
+
+  
