added index adaptive

--- a/app/module/_video-fashion/_video-fashion.scss
+++ b/app/module/_video-fashion/_video-fashion.scss
@@ -20,10 +20,10 @@
     background-position: center center;
     background-size: cover;
  }
- &__content{
+  &__content{
  max-width: 570px;
  }
- &__subtitle{
+  &__subtitle{
   padding-top: 75px;
   font-size: 22px;
   color: $accent;
@@ -39,4 +39,32 @@ margin-bottom: 55px;
   &__link{
   @extend %btn;
   }
+ }
+
+ @media (max-width: 1050px){
+  .video-fashion{
+    &__inner{
+      display: block;
+    }
+    &__popup{
+      max-width: 100%;
+      background-position: center top;
+    }
+    &__content{
+      max-width: 100%;
+    }
+   }
+ }
+
+ @media (max-width: 620px){
+   .video-fashion{
+      padding: 60px 0;
+      &__popup{
+        height: 270px;
+      }
+      &__subtitle{
+        padding-top: 40px;
+        font-size: 18px;
+      }
+   }
  }
