--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -126,6 +126,20 @@ a{
 &::before{
   background-image:url('../images/icons/angle_right.svg');
   right: 0;
-}
   }
+ }
+}
+
+@media (max-width: 620px){
+ .title{
+   font-size: 40px;
+   line-height: 48px;
+ }
+}
+
+@media (max-width: 375px){
+  .title{
+   font-size: 32px;
+   line-height: 40px;
+ }
 }
