--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -47,6 +47,7 @@ a{
   justify-content: center;
   padding-left: 25px;
   position: relative;
+  flex-wrap: wrap;
   &::before{
     content: "";
     position: absolute;
